--- a/templates/register.html
+++ b/templates/register.html
@@ -42,6 +42,7 @@
         
       </table>
       <input type="submit" value="送信">
+      <input type="reset" name="reset" value="リセット" >
     </form>
   </body>
 </html>
