--- a/templates/registerCheck.html
+++ b/templates/registerCheck.html
@@ -8,7 +8,7 @@
   <body>
     <h1>データベース登録確認</h1>
 
-    <form action="" method="POST"> 
+    <form action="../phps/registerCheckIndex.php" method="POST"> 
       <table>
         <tr>
           <td colspan=2>基本情報</td>
@@ -30,7 +30,8 @@
 
         
       </table>
-      <input type="submit" value="登録">
+      <input type="submit" name="regist" value="登録">
+      <input type="submit" name="back" value="戻る">
     </form>
   </body>
 </html>
