--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
           <th>名前</th>
-          <td><input type="text" name="name"></td>
+          <td><input type="text" name="name" value={$m_name}></td>
         </tr>
 
         <tr>
