INSERT処理の追加

--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,10 @@
 					<td colspan=2>基本情報</td>
 				</tr>
 				<tr>
+					<th>図鑑番号</th>
+					<td><input type="text" name="index" value={$m_index}></td>
+				</tr>
+				<tr>
 					<th>名前</th>
 					<td><input type="text" name="name" value={$m_name}></td>
 				</tr>	
