--- a/templates/registerCheck.html
+++ b/templates/registerCheck.html
@@ -13,6 +13,10 @@
 					<td colspan=2>基本情報</td>
 				</tr>
 				<tr>
+					<th>図鑑番号</th>
+					<td>{$smarty.post.index}</td>
+				</tr>
+				<tr>
 					<th>名前</th>
 					<td>{$smarty.post.name}</td>
 				</tr>
@@ -25,7 +29,7 @@
 					<td>{$type}</td>
 				</tr>
 			</table>
-
+			
 			<input type="submit" name="regist" value="登録">
 			<input type="submit" name="back" value="戻る">
 		</form>
