insertしたポケモンのデータを表示するページの作成開始 cssの見直し

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>データベース登録</h1>		
-		<form action="../phps/registerCheck.php" method="POST"> 
+		<form action="../app/registerCheck.php" method="POST"> 
 			<table>
 				<tr>
 					<td colspan=2>基本情報</td>
