--- a/templates/registerCheck.html
+++ b/templates/registerCheck.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>データベース登録確認</h1>
-		<form action="../phps/registerCheckIndex.php" method="POST"> 
+		<form action="../app/registerCheckIndex.php" method="POST"> 
 			<table>
 				<tr>
 					<td colspan=2>基本情報</td>
