--- a/templates/register.html
+++ b/templates/register.html
@@ -24,8 +24,8 @@
 					<th>性別</th>
 					<td>
 						{foreach from=$m_gender item=gender}
-							<input type="radio" name="gender" value={$gender.GENDER_ID}
-								{if $gender.GENDER_ID == $select_data_array.gender}
+							<input type="radio" name="gender" value={$gender.M_GENDER_ID}
+								{if $gender.M_GENDER_ID == $select_data_array.gender}
 									checked
 								{/if}
 							>
@@ -38,8 +38,8 @@
 				  <td>
 				      <select name="type">
 						{foreach from=$m_type item=type}
-							<option value={$type.TYPE_ID}
-								{if $type.TYPE_ID == $select_data_array.type}
+							<option value={$type.M_TYPE_ID}
+								{if $type.M_TYPE_ID == $select_data_array.type}
 									selected
 								{/if}
 								>{$type.NAME}
