性別をテーブル結合で取得できるようになった。

--- a/templates/PokedexView.html
+++ b/templates/PokedexView.html
@@ -33,7 +33,7 @@
 					<tr>
 						<td class="table_cell">{$pokemon_data.NATIONWIDE_ID}</td>
 						<td class="table_cell">{$pokemon_data.NAME}</td>
-						<td class="table_cell">メス</td>
+						<td class="table_cell">{$pokemon_data.GENDER_NAME}</td>
 					</tr>
 				{/foreach}
 
