図鑑テーブルと性別テーブルを結合してデータの取得が出来るようになった

--- a/templates/PokedexView.html
+++ b/templates/PokedexView.html
@@ -31,7 +31,7 @@
 				-->
 				{foreach from=$pokemon_index_data item=pokemon_data}
 					<tr>
-						<td class="table_cell">{$pokemon_data.NATIONWIDE_ID}</td>
+						<td class="table_cell">{$pokemon_data.M_NATIONWIDE_ID}</td>
 						<td class="table_cell">{$pokemon_data.NAME}</td>
 						<td class="table_cell">{$pokemon_data.GENDER_NAME}</td>
 					</tr>
